# pcsxgc

./: CMakeLists.txt  CdRom.c  CdRom.h  Coff.h  CoreDebug.h  Debug.h  Decode_XA.c  Decode_XA.h  DisR3000A.c  Gte.h  Mdec.c  Mdec.h  Misc.c  Misc.h  NoPic.h  PSEmu_Plugin_Defs.h  PsxBios.c  PsxBios.h  PsxCommon.c  PsxCommon.h  PsxCounters.c  PsxCounters.h  PsxDma.c  PsxDma.h  PsxGpu.c  PsxGpu.h  PsxHLE.c  PsxHLE.h  PsxHw.c  PsxHw.h  PsxInterpreter.c  PsxMem.c  PsxMem.h  R3000A.c  R3000A.h  README  Sio.c  Sio.h  Socket.c  Spu.c  (+19 more)
.github/workflows/: main.yml
Gamecube/: ARAM.h  Autoboot.cpp  Autoboot.h  DEBUG.c  DEBUG.h  GamecubeMain.c  GamecubeMain.cpp  GamecubePlugins.c  GamecubePlugins.h  MEM2.h  Makefile  Makefile.switch  Makefile_Cube  Makefile_Cube_GX  Makefile_Cube_Lightrec  Makefile_Wii  Makefile_Wii_GX  Makefile_Wii_Lightrec  NoPic.h  PadSSSPSX.c  PadSSSPSX.h  PadWiiSX.c  PlugCD.c  PlugCD.h  PlugGPU.c  PlugPAD.c  Plugin.c  Plugin.h  aesnd.c  font.c  gc_dvd.c  gc_plugin.c  plugins.c  profile.c  textFileBrowser.c  wiiSXconfig.h  xxhash.c  xxhash.h
Gamecube/fileBrowser/: fileBrowser-CARD.c  fileBrowser-DVD.c  fileBrowser-DVD.h  fileBrowser-SMB.c  fileBrowser-SMB.h  fileBrowser-libfat.c  fileBrowser-libfat.h  fileBrowser.c  fileBrowser.h  m2loader.c  m2loader.h
Gamecube/gc_input/: controller-Classic.c  controller-GC.c  controller-WiimoteNunchuk.c  controller-switch.c  controller.h
Gamecube/libgui/: Button.cpp  Button.h  CursorManager.cpp  FocusManager.cpp  FocusManager.h  Frame.cpp  GraphicsGX.cpp  GraphicsGX.h  Gui.cpp  GuiResources.cpp  GuiResources.h  GuiTypes.h  IPLFont.cpp  IPLFont.h  IPLFontC.h  InputManager.cpp  InputManager.h  InputStatusBar.cpp  InputStatusBar.h  LoadingBar.cpp  Logo.cpp  Logo.h  MessageBox.cpp  TextBox.cpp  TextBox.h  resources.s.cmakein
Gamecube/menu/: ConfigureButtonsFrame.cpp  ConfigureButtonsFrame.h  ConfigureInputFrame.cpp  CurrentRomFrame.cpp  FileBrowserFrame.cpp  FileBrowserFrame.h  LoadRomFrame.cpp  LoadRomFrame.h  MainFrame.cpp  MenuContext.cpp  MenuContext.h  MenuResources.S  MenuResources.h  MenuResources.s.cmakein  SettingsFrame.cpp  SettingsFrame.h
Gamecube/release/: README  cubeSX.dol
Gamecube/vm/: vm.c  vm.h
PeopsCdr104/: Cdr.c  Ioctrl.c  PSEmu Plugin Defs.h  StdAfx.c  StdAfx.h  cdda.c  cdrPeops.c  cdrPeops.def  cdrPeops.h  cdrPeops.plg  cfg.c  changelog.txt  defines.h  externals.h  filemap.txt  generic.c  generic.h  ppf.c  read.c  resource.h  scsi.c  scsi.h  sub.c  toc.c
PeopsGXGPU/: GL_EXT.H  Makefile  about.c  about.h  cfg.c  cfg.h  clean.bat  draw.c  draw.h  externals.h  fps.c  fps.h  glext.h  glgx.c  glgx.h  gpu.c  gpu.h  gpuPeopsOpenGL.c  gpuPeopsOpenGL.def  gpuPeopsOpenGL.dsp  gpuPeopsOpenGL.dsw  gpuPeopsOpenGL.h  gpuPeopsOpenGL.rc  gxsupp.c  gxsupp.h  key.c  key.h  menu.c  menu.h  prim.c  prim.h  psemu.h  psemu_phi.h  resource.h  soft.c  soft.h  ssave.c  ssave.h  stdafx.h  swap.h  (+3 more)
PeopsGXGPU/debug/: debug.txt
PeopsGXGPU/opengx/: gc_gl.c  gl.h  glu.h  image_DXT.c  image_DXT.h
PeopsGXGPU/release/: release.txt
PeopsGXGPU/res/: gpuPeopsOpenGL.rc2
PeopsSoftGPU/: DrawString.c  DrawStringFont.h  cfg.c  cfgPeopsSoft  draw.c.old  draw.h  drawGX.c  externals.h  fps.c  fps.h  gpu.c  gpu.h  gpupeopssoft.c  hq2x16.asm  hq2x32.asm  hq3x16.asm  interp.h  key.c  key.c.bak  license.txt  menu.c  mingw_d3dtypes.h  mingw_ddraw.h  peops_soft_readme_1_18.txt  peops_soft_version_1_18.txt  prim.c  prim.h  resource.h  soft.c  soft.h  stdafx.h  swap.h  type.h
PeopsSoftGPU/debug/: debug.txt
PeopsSoftGPU/fpse/: type.h  win32def.h
PeopsSoftGPU/makes/: mingw_gpu114.patch  mk.fpse  plg.mk  readme.txt
PeopsSpu109/: Filemap.txt  PEOPSSPUdebug.c  PEOPSspu.c  adsr.c  alsa.c  cfg.c  changelog.txt  cube_audio.c  cube_audio.h  dma.c  dsound.c  dsoundoss.h  externals.h  freeze.c  oss.c  psemu.c  psemuxa.h  readme_1_9.txt  record.c  record.h  registers.c  regs.h  reverb.c  reverb.h  spuPeopsSound.c  spuswap.h  stdafx.h  xa.c  zn.c
PeteNullSPU/: spunull.c  xa.h
beta2/: CdRom.c  CdRom.h  CoreDebug.h  Decode_XA.c  DisR3000A.c  Gte.h  PsxBios.h  PsxCounters.c  PsxDma.c  PsxDma.h  PsxHLE.h  PsxHw.c  PsxHw.h  PsxMem.h  R3000A.h  Sio.h  Spu.c  Spu.h
beta2/Gamecube/: DEBUG.c  GamecubeMain.cpp  Makefile_Wii  PadSSSPSX.c  PlugCD.c  PlugPAD.c  plugins.c  wiiSXconfig.h
beta2/PeopsSoftGPU/: DrawString.c  DrawString.h  Makefile  cfg.h  changelog.txt  draw.h  drawGX.c  filemap.txt  fps.c  gpu.c  gpuPeopsSoft.dsp  gpuPeopsSoft.plg  gpuPeopsSoft.rc  gpupeopssoft.c  gpupeopssoft.def  gpupeopssoft.dsw  hq3x.h  hq3x32.asm  i386.asm  menu.c  prim.c  soft.c  type.h
beta2/PeopsSpu109/: alsa.c  debug.h  dma.h  dsoundoss.h  psemu.c  record.c  record.h  regs.h  resource.h  reverb.c  spu.h  stdafx.h  version_1_9.txt  xa.c  zn.c
beta2/cdrmooby28/: CDTime.hpp  ConfigCallbacks.cpp  ConfigCallbacks.hpp  ConfigFunctions.cpp  ConfigFunctions.hpp  FileInterface.cpp  Globals.cpp  Open.cpp  PS2Open.cpp  TimeCache.hpp  cdrmooby2.dsp
beta2/franspu/: franspu.c  franspu.h  spu_output_sdl.c  spu_xa.c
beta2/ppc/: reguse.c  reguse.h
cdrmooby28/: About.cpp  CDDAData.cpp  CDDAData.hpp  CDInterface.hpp  CDTime.hpp  ConfigCallbacks.cpp  ConfigCallbacks.hpp  ConfigFunctions.cpp  ConfigFunctions.hpp  Exception.hpp  FileInterface.cpp  FileInterface.hpp  Frame.hpp  Globals.cpp  Jamfile  Open.cpp  PS2Open.cpp  Preferences.cpp  Preferences.hpp  SubchannelData.cpp  SubchannelData.hpp  TrackInfo.hpp  TrackParser.cpp  TrackParser.hpp  Utils.hpp  cdrmooby2.dsw  defines.h  externs.h  notes.txt
dfsound/: adsr.c  aesnd.c  alsa.c  arm_utils.S  dma.c  dma.h  externals.h  freeze.c  oss.c  out.c  psemuxa.h  pulseaudio.c  registers.c  registers.h  sdl.c  spu.h  spu_c64x.c  spu_c64x_dspcode.c  spu_dfsound.c
franspu/: cube_audio.c  franspu-alternate.c  franspu.c  franspu.h  spu_adsr.c  spu_output.c  spu_output_iphone.c  spu_output_sdl.c  spu_registers.c  spu_xa.c
gpu_unai/: gpu_arm.S  gpulib_if.cpp  unai_gpu.cpp
pcsx_rearmed/: .gitrepo
pcsx_rearmed/libpcsxcore/: cdriso.c  plugins.c
ppc/: pGte.h  pR3000A.c  pR3000A.h  pasm.s  ppc.c  ppc.h  ppc_mnemonics.h  reguse.c
(+50 files in other folders)
